<resources>
    <string name="app_name">TechNow</string>
    <string name="title_home">Inicio</string>
    <string name="navigation_carrinho">Carrinho</string>
    <string name="navigation_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciarsessao">Iniciar Sessão</string>
    <string name="passwd_hint">Palavra Chave</string>
    <string name="username_hint">Nome de Utilizador</string>
    <string name="create_account">Criar Conta</string>
    <string name="hint_mail">exemplo@mail.com</string>
    <string name="hint_email">Email</string>
    <string name="pesquisa_menu">Pesquisa</string>
    <string name="carrinho">Carrinho de Compras</string>
    <string name="confirmar_email"><p>Foi lhe enviado</p> um email de confirmação para o email.<p>Seja bem vindo</p> </string>
    <string name="inicia_sessap">Iniciar Sessão</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="voltar_sessao">Voltar</string>
    <string name="preco">Preço</string>
    <string name="specs">Especificações</string>
    <string name="comparador">Comparador</string>
    <string name="carrinho_de_compras">Carrinho de Compras</string>
    <string name="inicio">Inicio</string>
    <string name="adiciona_ao_comparador">Adiciona ao Comparador</string>
    <string name="adiciona_ao_carrinho">Adiciona ao Carrinho</string>
    <string name="quantidade">1</string>
    <string name="limpa">Limpa</string>
    <string name="iniciar_encomenda">Iniciar Encomenda</string>
    <string name="encomendas">Confirme</string>
    <string name="preco_total">0 €</string>
    <string name="etapas_1">Etapa 1 de 4..</string>
    <string name="etapas_2">Etapa 2 de 4..</string>
    <string name="etapas_3">Etapa 3 de 4..</string>
    <string name="etapas_4">Etapa 4 de 4..</string>
    <string name="confirm_morada">Confirme a sua Morada</string>
    <string name="avancar">Avançar</string>
    <string name="voltar">Voltar</string>
    <string name="criar_morada">Criar Morada</string>
    <string name="tipo_pagamento_1">Cartão Multibanco</string>
    <string name="tipo_pagamento_2">paySafeCard</string>
    <string name="etapas_3_1">Etapa 3.1 de 4.. </string>
    <string name="numero_multibanco">Insira o Numero do Cartão Multibanco</string>
    <string name="numero_multibanco_2">Insira o Codigo enviado para o seu telemovel </string>
    <string name="finalizar">Finalizar</string>
    <string name="etapas_confirm">Confirmar</string>
    <string name="confirme_os_dados">Confirme os Dados</string>
    <string name="metodo_pagamento">Método de Pagamento</string>
    <string name="continuar">Continuar</string>
    <string name="codigo">Codigo</string>
    <string name="no_cartao">Numero do Cartão de Crédito</string>
    <string name="multibanco">Multibanco</string>
    <string name="hint_calendario">Clique no botão Calendario para escolher a data de entrega</string>
    <string name="titulo_data">Selecione a Data de Entrega</string>
    <string name="remove">Remover</string>

</resources>
