<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_inicia_sessao"
        android:icon="@drawable/settings"
        android:title="Iniciar Sessão"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/carrinho"
        android:title="@string/navigation_carrinho"/>
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/settings"
        android:title="@string/navigation_settings"
        android:onClick="onClick1"
        />

</menu>
