<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Encomenda_Pagamento">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/etapas_3"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/etapas_3_1"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/titulo_multibanco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/multibanco"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/insira_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:text="@string/numero_multibanco"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_1"
                android:layout_width="244dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:hint="@string/no_cartao"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/insira_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/numero_multibanco_2"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/input_2"
                android:layout_width="244dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:hint="@string/codigo"
                android:inputType="textPersonName"
                android:visibility="gone" />


            <Button
                android:id="@+id/continuar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:onClick="multibanco_add_numero"
                android:text="@string/continuar"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_multibanco"
                android:layout_width="match_parent"
                android:layout_height="290dp" />
            <Button
                android:id="@+id/voltar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="multibanco_click"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/voltar"
                tools:layout_editor_absoluteX="8dp" />


        </LinearLayout>


    </ScrollView>



</android.support.constraint.ConstraintLayout>
