<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopCart">


    <TextView
        android:id="@+id/titulo_carrinho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carrinho_de_compras"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo_carrinho"
        app:layout_constraintBottom_toTopOf="@+id/botoescarrinho">

    <ListView
        android:id="@+id/list_carrinho"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/botoescarrinho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/botaoLimpa_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="58dp"
            android:layout_marginBottom="4dp"

            android:onClick="limpacarrinho"
            android:text="@string/limpa" />

        <Button
            android:id="@+id/botaoencomenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_toEndOf="@+id/botaoLimpa_2"
            android:onClick="encomendar"
            android:text="@string/iniciar_encomenda" />

    </RelativeLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>